# sorastats

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs  poll.rs  poller.rs  stats.rs  ui.rs
