[package]
name = "sorastats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
crossterm = "0.23"
log = "0.4"
ordered-float = "2"
regex = "1"
serde_json = "1"
simplelog = "0.12"
tui = "0.18"
ureq = { version = "2", features = ["json"] }
