[package]
name = "sorastats"
version = "0.2.1"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A terminal based viewer of WebRTC SFU Sora statistics"
homepage = "https://github.com/sile/sorastats"
repository = "https://github.com/sile/sorastats"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
log = "0.4"
orfail = "1.1.0"
ratatui = "0.29.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
ureq = { version = "2", features = ["json"] }
